[package]
name = "rcon-cli"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rcon-cli"
path = "src/main.rs"

[lib]
name = "rcon_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
byteorder = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
atty = "0.2"
regex = "1.0"
